--- a/comsumer/Dockerfile
+++ b/comsumer/Dockerfile
@@ -1,5 +1,5 @@
 FROM eclipse-temurin:11-jre-alpine
 RUN /bin/cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
   && echo 'Asia/Shanghai' >/etc/timezone
-ADD /target/consumer.jar /
-ENTRYPOINT java -jar /consumer.jar
+ADD /target/comsumer.jar /
+ENTRYPOINT java -jar /comsumer.jar
