--- a/comsumer/k8s.yaml
+++ b/comsumer/k8s.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: nacos-istio-comsumer
-          image: leis17/nacos-istio-consumer
+          image: leis17/nacos-istio-consumer:v1.0
           imagePullPolicy: Always
           ports:
             - name: http
