--- a/provider/k8s.yaml
+++ b/provider/k8s.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: nacos-istio-provider
-          image: leis17/nacos-istio-provider
+          image: leis17/nacos-istio-provider:v1.0
           imagePullPolicy: Always
           ports:
             - name: http
