--- a/comsumer/pom.xml
+++ b/comsumer/pom.xml
@@ -35,6 +35,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>io.github.mark8s.ProviderApplication</mainClass>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
