--- a/provider/Dockerfile
+++ b/provider/Dockerfile
@@ -1,6 +1,6 @@
 FROM eclipse-temurin:11-jre-alpine
 RUN /bin/cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
   && echo 'Asia/Shanghai' >/etc/timezone
-ADD /target/provider.jar /
-ENTRYPOINT java -jar /provider.jar
+ADD /target/provider-1.0-SNAPSHOT.jar /
+ENTRYPOINT java -jar /provider-1.0-SNAPSHOT.jar
 
