--- a/deploy.yaml
+++ b/deploy.yaml
@@ -2,7 +2,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nacos-istio-provider
-  version: v1
+  labels:
+    app: nacos-istio-provider
+    version: v1
 spec:
   replicas: 1
   selector:
@@ -19,6 +21,72 @@ spec:
         - name: nacos-istio-provider
           image: leis17/nacos-istio-provider:v1.0
           imagePullPolicy: Always
+          ports:
+            - name: http
+              protocol: TCP
+              containerPort: 8081
+
+---
+
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: nacos-istio-provider-v2
+  labels:
+    app: nacos-istio-provider-v2
+    version: v2
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: nacos-istio-provider
+      version: v2
+  template:
+    metadata:
+      labels:
+        app: nacos-istio-provider
+        version: v2
+    spec:
+      containers:
+        - name: nacos-istio-provider
+          image: leis17/nacos-istio-provider:v1.0
+          imagePullPolicy: Always
+          env:
+            - name: console_output
+              value: "hi,i'm provider v2 ！！！ "
+          ports:
+            - name: http
+              protocol: TCP
+              containerPort: 8081
+
+---
+
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: nacos-istio-provider-v3
+  labels:
+    app: nacos-istio-provider-v3
+    version: v3
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: nacos-istio-provider
+      version: v3
+  template:
+    metadata:
+      labels:
+        app: nacos-istio-provider
+        version: v3
+    spec:
+      containers:
+        - name: nacos-istio-provider
+          image: leis17/nacos-istio-provider:v1.0
+          imagePullPolicy: Always
+          env:
+            - name: console_output
+              value: "hi,i'm provider v3 ！！！ "
           ports:
             - name: http
               protocol: TCP
@@ -47,8 +115,10 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nacos-istio-comsumer-v1
-  version: v1
+  name: nacos-istio-comsumer
+  labels:
+    app: nacos-istio-comsumer
+    version: v1
 spec:
   replicas: 1
   selector:
@@ -65,68 +135,6 @@ spec:
         - name: nacos-istio-comsumer
           image: leis17/nacos-istio-consumer:v1.0
           imagePullPolicy: Always
-          ports:
-            - name: http
-              protocol: TCP
-              containerPort: 8080
-
----
-
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: nacos-istio-comsumer-v2
-  version: v2
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: nacos-istio-comsumer
-      version: v2
-  template:
-    metadata:
-      labels:
-        app: nacos-istio-comsumer
-        version: v2
-    spec:
-      containers:
-        - name: nacos-istio-comsumer
-          image: leis17/nacos-istio-consumer:v1.0
-          imagePullPolicy: Always
-          env:
-          - name: console_output
-            value: "hi,i'm provider v2 ！！！ "
-          ports:
-            - name: http
-              protocol: TCP
-              containerPort: 8080
-
----
-
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: nacos-istio-comsumer-v3
-  version: v3
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: nacos-istio-comsumer
-      version: v3
-  template:
-    metadata:
-      labels:
-        app: nacos-istio-comsumer
-        version: v3
-    spec:
-      containers:
-        - name: nacos-istio-comsumer
-          image: leis17/nacos-istio-consumer:v1.0
-          imagePullPolicy: Always
-          env:
-            - name: console_output
-              value: "hi,i'm provider v3 ！！！ "
           ports:
             - name: http
               protocol: TCP
