--- a/provider/src/main/resources/application.yaml
+++ b/provider/src/main/resources/application.yaml
@@ -7,7 +7,8 @@ spring:
     nacos:
       discovery:
         server-addr: 10.10.13.48:8848
-
+        metadata:
+          version: v1
         group: test
 
 server:
