--- a/provider/src/main/resources/application.yaml
+++ b/provider/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 10.10.13.48:8848
+        server-addr: nacos-external
         metadata:
           version: v1
         group: test
