--- a/comsumer/src/main/resources/application.yaml
+++ b/comsumer/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: http://nacos.external:8849
+        server-addr: http://10.10.13.87:8848
         group: test
         metadata:
           version: v1
