--- a/deploy.yaml
+++ b/deploy.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: nacos-istio-provider
-          image: leis17/nacos-istio-provider:v2.0
+          image: registry.cn-shenzhen.aliyuncs.com/solarmesh/nacos-istio-provider:v2.0
           imagePullPolicy: Always
           env:
             - name: SPRING_CLOUD_NACOS_DISCOVERY_SERVERADDR
@@ -54,7 +54,7 @@ spec:
     spec:
       containers:
         - name: nacos-istio-provider
-          image: leis17/nacos-istio-provider:v2.0
+          image: registry.cn-shenzhen.aliyuncs.com/solarmesh/nacos-istio-provider:v2.0
           imagePullPolicy: Always
           env:
             - name: console_output
@@ -91,7 +91,7 @@ spec:
     spec:
       containers:
         - name: nacos-istio-provider
-          image: leis17/nacos-istio-provider:v2.0
+          image: registry.cn-shenzhen.aliyuncs.com/solarmesh/nacos-istio-provider:v2.0
           imagePullPolicy: Always
           env:
             - name: console_output
@@ -147,7 +147,7 @@ spec:
     spec:
       containers:
         - name: nacos-istio-comsumer
-          image: leis17/nacos-istio-consumer:v2.0
+          image: registry.cn-shenzhen.aliyuncs.com/solarmesh/nacos-istio-consumer:v2.0
           imagePullPolicy: Always
           env:
             - name: SPRING_CLOUD_NACOS_DISCOVERY_SERVERADDR
@@ -161,22 +161,22 @@ spec:
 
 ---
 
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: nacos-istio-comsumer
-#   labels:
-#     app: nacos-istio-comsumer
-# spec:
-#   type: NodePort
-#   selector:
-#     app: nacos-istio-comsumer
-#   ports:
-#     - name: http
-#       protocol: TCP
- #      port: 8080
- #      targetPort: 8080
-  #     nodePort: 30201
+apiVersion: v1
+kind: Service
+metadata:
+  name: nacos-istio-comsumer
+  labels:
+    app: nacos-istio-comsumer
+  spec:
+    type: NodePort
+    selector:
+      app: nacos-istio-comsumer
+    ports:
+      - name: http
+        protocol: TCP
+        port: 8080
+        targetPort: 8080
+        nodePort: 30204
 ---
 
 #apiVersion: networking.istio.io/v1beta1
