--- a/test-traffic.yaml
+++ b/test-traffic.yaml
@@ -14,7 +14,6 @@ spec:
     - labels:
         version: v3
       name: v3
-
 ---
 
 apiVersion: networking.istio.io/v1beta1
@@ -27,6 +26,6 @@ spec:
   http:
     - route:
         - destination:
-            host: nacos-istio-provider
-            subset: v2
+            host: mesh-server.test.public.nacos
+            subset: v1
           weight: 100
